    #206113).
  * Remove packages in the restricted section from the installed system if
    apt-setup/restricted is false.
  * Fix crash with the "don't use" partitioning option (LP: #132611).
  * Use localised, human-readable names for partitioning methods.
  * Reorganise the wrapper script to cope with kdesu's broken argument
    handling.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 01 Apr 2008 11:49:51 -0400

ubiquity (1.8.1) hardy; urgency=low

  [ Evan Dandrea ]
  * Change --no-continue option to a more general --only option for use
    in only-ubiquity and automatic-ubiquity modes.
  * Disable the minimize button when using --only (LP: #200034).
  * Properly return in debconf progress functions in the noninteractive
    frontend.  Thanks Colin Watson.
  * Print progress updates on a new line again in the noninteractive
    frontend.
  * When clicking back from the advanced partitioner, go back to the first
    partitioning page rather than the keyboard page.  Thanks Jonathan
    Riddell.
  * Remove dead code for the old resize widget.
  * Fix printing of non-latin text in the noninteractive frontend.
  * bin/ubiquity-dm: Set groups in drop_privileges.
  * Use the proper username and full name in oem_config mode for the
    noninteractive frontend.
  * Exit on failure to commit to the partition table in the noninteractive
    frontend.
  * Move the spawning of the noninteractive frontend when the noninteractive
    kernel cmdline option is present out of casper and into debian/init.
  * Automatic update of included source packages: choose-mirror
    2.19ubuntu3, localechooser 1.42ubuntu3, partman-auto 73ubuntu6,
    partman-base 114ubuntu4, partman-partitioning 54ubuntu5.

  [ Colin Watson ]
  * Set OVERRIDE_SHOW_ALL_LANGUAGES while calling localechooser, so that
    even languages with complex scripts are displayed (LP: #202291).
  * Run fontconfig-voodoo as root (LP: #203086).

  [ Luke Yelavich ]