@@ -25,7 +25,7 @@
    <property name="spacing" >
     <number>6</number>
    </property>
-   <item row="4" column="0" colspan="2" >
+   <item row="5" column="0" colspan="2" >
     <spacer>
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
@@ -65,14 +65,14 @@
    <item row="1" column="1" >
     <widget class="QSpinBox" name="partition_edit_size_spinbutton" />
    </item>
-   <item row="3" column="1" >
+   <item row="4" column="1" >
     <widget class="QComboBox" name="partition_edit_mount_combo" >
      <property name="editable" >
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" >
+   <item row="4" column="0" >
     <widget class="QLabel" name="partition_edit_mount_label" >
      <property name="text" >
       <string>Mount point:</string>
@@ -86,7 +86,17 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2" >
+   <item row="3" column="0" >
+    <widget class="QLabel" name="partition_edit_format_label" >
+     <property name="text" >
+      <string>Format the partition:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" >
+    <widget class="QCheckBox" name="partition_edit_format_checkbutton" />
+   </item>
+   <item row="6" column="0" colspan="2" >
     <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="orientation" >
       <enum>Qt::Horizontal</enum>
